PokeTradR/force-app/main/default/objects/Complaint__c/Complaint__c.object-meta.xml
<CustomObject>
    <description>Complaints made toward another Trainer</description>
    <label>Complaint</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Complaint Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>