PokeTradR/force-app/main/default/objects/Complaint__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <description>Extra information for Trainer to write here</description>
    <inlineHelpText>Please enter more detail for us to look into the matter</inlineHelpText>
    <label>Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>