PokeTradR/force-app/main/default/objects/Complaint__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reasoning for the complaint</description>
    <label>Reason</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Harassment</fullName>
            </value>
            <value>
                <fullName>Scamming</fullName>
            </value>
            <value>
                <fullName>Inappropriate Behavior</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>