PokeTradR/force-app/main/default/objects/Complaint__c/fields/Trainer_Being_Reported__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Being_Reported__c</fullName>
    <label>Trainer Being Reported</label>
    <length>50</length>
    <type>Text</type>
</CustomField>