PokeTradR/force-app/main/default/objects/Complaint__c/fields/Trainer_Reported__c.field-meta.xml
<CustomField>
    <fullName>Trainer_Reported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who&apos;s being reported?</description>
    <label>Trainer Reported</label>
    <referenceTo>Trainer__c</referenceTo>
    <relationshipLabel>Complaints (Trainer Reported)</relationshipLabel>
    <relationshipName>Complaints1</relationshipName>
    <type>Lookup</type>
</CustomField>