PokeTradR/force-app/main/default/objects/Complaint__c/validationRules/Issue_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Issue_cannot_be_empty</fullName>
    <active>true</active>
    <description>Issue section of complaint cannot be left blank.</description>
    <errorConditionFormula>Issue__c == &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Issue__c</errorDisplayField>
    <errorMessage>Please explain your issue with this trainer.</errorMessage>
</ValidationRule>