PokeTradR/force-app/main/default/objects/Complaint__c/validationRules/TrainerBeingReportedCannotBeEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>TrainerBeingReportedCannotBeEmpty</fullName>
    <active>true</active>
    <errorConditionFormula>Trainer_Being_Reported__c == &apos;&apos; ||
 Trainer_Being_Reported__c == &apos; &apos;</errorConditionFormula>
    <errorDisplayField>Trainer_Being_Reported__c</errorDisplayField>
    <errorMessage>Please fill in the Trainer name you are reporting.</errorMessage>
</ValidationRule>