PokeTradR/force-app/main/default/objects/Complaint__c/listViews/Complaints_and_Cases_Complaint.listView-meta.xml
<ListView>
    <fullName>Complaints_and_Cases_Complaint</fullName>
    <filterScope>Queue</filterScope>
    <label>Complaints and Cases</label>
    <queue>Complaints_and_Cases</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>